fixed layout issues as well as the stuff with cards/sounds

--- a/public/memory_game.css
+++ b/public/memory_game.css
@@ -136,6 +136,10 @@ td {
         max-height: 200px;
         max-width: 200px;
     }
+
+    #message {
+        display:none;
+    }
 }
 
 
